@@ -11,6 +11,10 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>Key-Value Coding of Python objects should act like Objective-C now.
+Previously, its capitalization method didn't match Objective-C's, it
+wouldn't use setter accessors with an underscore postfix, and it
+generally didn't behave as documented.</li>
 <li>The formal protocol list should be more complete.  A new 
 <code><span>objc.protocolsForProcess()</span></code> enumerates over all mach
 headers and returns all of the protocols defined in the expected
